# CMake

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
Testing/Temporary/: CTestCostData.txt
include/: Permit_type.h  Premit.h  TouristVehicle.h  Vehicle_type.h  functionalities.h
src/: CMakeCache.txt  CMakeLists.txt  Main.cpp  Makefile  Premit.cpp  TouristVehicle.cpp  cmake_install.cmake  functionalities.cpp  out
test/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_my_code  test_my_code.cpp
